--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <nav>
-      <div class="flex justify-start p-4 border-b border-black">
+      <div class="flex justify-between p-4 border-b border-black">
         <div>
           <h2 class="font-bold text-xl btn text-[#AD192A] px-4 rounded-lg py-2">
             Food Mama
