--- a/contact.html
+++ b/contact.html
@@ -33,10 +33,17 @@
     <main>
         <h1 class="text-center my-4 font-bold text-2xl">We'd love to hear from you.</h1>
         <div class="grid grid-cols-2 gap-2 my-8">
-            <div class="">
-                <input type="text">
+            <div class="flex flex-col items-center justify-center">
+                <h1 class="mb-4 font-semibold text-lg">Use the form bellow to contact with us</h1>
+                <div class="text-center flex flex-col gap-2 px-12 py-8 shadow-lg rounded-lg border">
+                    <input type="text" placeholder="Type here" class="input input-bordered input-md w-full max-w-xs" />
+                    <input type="text" placeholder="Type here" class="input input-bordered input-md w-full max-w-xs" />
+                    <input type="text" placeholder="Type here" class="input input-bordered input-md w-full max-w-xs" />
+                    <input type="text" placeholder="Type here" class="input input-bordered input-md w-full max-w-xs" />
+                </div>
             </div>
-            <div class="rounded-lg">
+            <div class="">
+                <h1 class="text-center text-xl font-semibold my-4" >Our Location</h1>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29495.14486950153!2d91.7736858129501!3d22.470650789490108!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30acd655bb74e667%3A0x45e5b5e729a98497!2sChittagong%20University%20Railway%20Station!5e0!3m2!1sen!2sbd!4v1717419661955!5m2!1sen!2sbd" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
